fix portfolio drawer overflowing

--- a/src/sass/app_2/trading.scss
+++ b/src/sass/app_2/trading.scss
@@ -1,4 +1,6 @@
 #trade_app {
+    overflow: hidden;
+
     .notice-msg {
         background: unset;
         /* stylelint-disable color-no-hex */
